--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,12 @@
 
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default zone: http://localhost:8761/eureka
+
+
+  
