--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,1 +1,15 @@
 
+spring:
+  application:
+    name: Config-Prod
+
+
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default zone: http://localhost:8761/eureka
